pom cleanup